# eemail

./: .gitignore  Cargo.toml  README.md  config.toml
components/configurator/: Cargo.toml
components/configurator/src/: lib.rs
components/smtp/: Cargo.toml
components/smtp/src/: lib.rs  message_handler.rs
lib/protocols/smtp/server/: Cargo.toml
lib/protocols/smtp/server/src/: lib.rs
lib/protocols/smtp/server/src/commands/: auth.rs  data.rs  ehlo.rs  mail.rs  mod.rs  quit.rs  rcpt.rs  starttls.rs
lib/shared/: Cargo.toml
lib/shared/src/: lib.rs
nix/modules/: devshell.nix  rust.nix
src/: main.rs
tests/: config.toml
