[package]
authors = ["Sean Outram <me@sean.cyou>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "eemail"
description = "A simple Rust project using Nix"
version = "0.1.0"

[workspace]
resolver = "3"
members = ["components/configurator"]

[dependencies]
eemail_component_configurator = { path = "./components/configurator" }
