[package]
authors = ["Sean Outram <me@sean.cyou>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "eemail"
description = "A simple Rust project using Nix"
version = "0.1.0"

[workspace]
resolver = "3"
members = ["components/configurator", "components/smtp", "lib/protocols/smtp/server", "lib/shared"]

[dependencies]
dotenv = "0.15.0"
eemail_component_configurator = { path = "./components/configurator" }
eemail_component_smtp = { path = "./components/smtp" }
env_logger = "0.11.8"
log = "0.4.29"
tokio = { version = "1.48.0", features = ["full"] }
