[package]
name = "eemail_component_smtp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
log = "0.4.29"
tokio = { version = "1.48.0", features = ["full"] }
eemail_component_configurator = { path = "../configurator" }
uuid = { version = "1.19.0", features = ["v7"] }
base64 = "0.22.1"

yescrypt = "0.1.0-rc.1"
