[package]
name = "eemail_component_smtp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
log = "0.4.29"
tokio = { version = "1.48.0", features = ["full"] }
eemail_component_configurator = { path = "../configurator" }
eemail_lib_protocols_smtp_server = { path = "../../lib/protocols/smtp/server" }
eemail_lib_shared = { path = "../../lib/shared" }
uuid = { version = "1.19.0", features = ["v7"] }
base64 = "0.22.1"

yescrypt = "0.1.0-rc.1"
rustls = "0.23.35"
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"

